# haskell-sketchpad

./: .gitignore  README.md  haskell-sketchpad.cabal  run  stack.yaml
src/: Applicatives.hs  Datatypes.hs  ExistentialTypes.hs  HoleDrivenDevelopment.hs  MakingMonads.hs  ReaderTransformer.hs  RecursionSchemes.hs  Sketchpad.hs  Timer.hs  Transformers.hs  Typeclasses.hs  Writer.hs
src/Algorithms/: Mergesort.hs
src/CatTheory/: Part03.hs  Part04.hs
src/HaskellProgramming/: Chapter06MatchTheType.hs  Chapter06Typeclasses.hs  Chapter07MoreFunctionalPatterns.hs  Chapter09.hs  Chapter09Lists.hs  Chapter10.hs  Chapter10FoldingLists.hs  Chapter11Datatypes.hs  Chapter12Adversity.hs  Chapter14Morse.hs  Chapter14Testing.hs  Chapter15Monoids.hs  Chapter15Semigroups.hs  Chapter16Functors.hs  Chapter6Typeclasses.hs  Cipher.hs  Learn.hs
test/: ApplicativesSpec.hs  DatatypesSpec.hs  ExistentialTypesSpec.hs  LensesSpec.hs  MakingMoadsSpec.hs  MakingMonadsSpec.hs  QuickCheckSpec.hs  ReaderTransformerSpec.hs  TransformersSpec.hs  TypeclassesSpec.hs  WriterSpec.hs
test/Algorithms/: MergesortSpec.hs
test/HaskellProgramming/: Chapter06TypeclassesSpec.hs  Chapter09ListsSpec.hs  Chapter09Spec.hs  Chapter10FoldingListsSpec.hs  Chapter10Spec.hs  Chapter11DatatypesSpec.hs  Chapter12AdversitySpec.hs  Chapter14MorseSpec.hs  Chapter14TestingSpec.hs  Chapter15MonoidsSpec.hs  Chapter15SemigroupsSpec.hs  Chapter6TypeclassesSpec.hs  CipherSpec.hs
