name:              haskell-sketchpad
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.10

executable haskell-sketchpad
  main-is:         Sketchpad.hs
  hs-source-dirs:  src
  default-language:Haskell2010
  other-modules:   Timer
  build-depends:   base,
                   haskell-sketchpad

library
  ghc-options:     -Wall
  exposed-modules: Datatypes,
                   Applicatives,
                   MakingMonads,
                   Transformers,
                   Writer,
                   ReaderTransformer,
                   RecursionSchemes,
                   ExistentialTypes,
                   CatTheory.Part03, CatTheory.Part04,
                   Algorithms.Mergesort,
                   HoleDrivenDevelopment,
                   HaskellProgramming.Chapter6Typeclasses
  hs-source-dirs:  src
  default-language:Haskell2010
  build-depends:   base,
                   mtl,
                   recursion-schemes,
                   data-ordlist

test-suite spec
  main-is:         Spec.hs
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  default-language:Haskell2010
  other-modules:   Algorithms.MergesortSpec,
                   ApplicativesSpec,
                   DatatypesSpec,
                   ExistentialTypesSpec,
                   LensesSpec,
                   MakingMonadsSpec,
                   QuickCheckSpec,
                   ReaderTransformerSpec,
                   TransformersSpec,
                   WriterSpec
  build-depends:   base,
                   haskell-sketchpad,
                   hspec,
                   mtl,
                   QuickCheck,
                   lens
