name:              haskell-sketchpad
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.10

executable haskell-sketchpad
  main-is:         Sketchpad.hs
  hs-source-dirs:  src
  default-language:Haskell2010
  other-modules:   Timer
  build-depends:   base,
                   haskell-sketchpad

library
  ghc-options:     -Wall
  exposed-modules: Datatypes,
                   Applicatives,
                   MakingMonads,
                   Transformers,
                   Writer,
                   ReaderTransformer,
                   RecursionSchemes,
                   ExistentialTypes,
                   CatTheory.Part03, CatTheory.Part04,
                   Algorithms.Mergesort,
                   HoleDrivenDevelopment,
                   HaskellProgramming.Chapter06Typeclasses,
                   HaskellProgramming.Chapter09Lists,
                   HaskellProgramming.Chapter10FoldingLists,
                   HaskellProgramming.Cipher,
                   HaskellProgramming.Chapter11Datatypes,
                   HaskellProgramming.Chapter12Adversity,
                   HaskellProgramming.Chapter14Morse,
                   HaskellProgramming.Chapter14Testing,
                   HaskellProgramming.Chapter15Monoids,
                   Typeclasses
  hs-source-dirs:  src
  default-language:Haskell2010
  build-depends:   base,
                   mtl,
                   QuickCheck,
                   recursion-schemes,
                   data-ordlist,
                   time,
                   containers,
                   semigroups

test-suite spec
  main-is:         Spec.hs
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  default-language:Haskell2010
  other-modules:   Algorithms.MergesortSpec,
                   ApplicativesSpec,
                   DatatypesSpec,
                   ExistentialTypesSpec,
                   LensesSpec,
                   MakingMonadsSpec,
                   QuickCheckSpec,
                   ReaderTransformerSpec,
                   TransformersSpec,
                   WriterSpec,
                   HaskellProgramming.Chapter06TypeclassesSpec,
                   HaskellProgramming.Chapter09ListsSpec,
                   HaskellProgramming.Chapter10FoldingListsSpec,
                   HaskellProgramming.CipherSpec,
                   HaskellProgramming.Chapter11DatatypesSpec,
                   HaskellProgramming.Chapter12AdversitySpec,
                   HaskellProgramming.Chapter14MorseSpec,
                   HaskellProgramming.Chapter14TestingSpec,
                   HaskellProgramming.Chapter15MonoidsSpec,
                   TypeclassesSpec
  build-depends:   base,
                   haskell-sketchpad,
                   hspec,
                   mtl,
                   QuickCheck,
                   lens,
                   time,
                   containers
